Thu Jan 18 08:57:10 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/utf8_2.c: fix error handler

Wed Jan 17 09:48:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/fisql/fisql.c: use mkstemp instead of mktemp
	* src/tds/util.c: cleanup

Tue Jan 16 16:30:42 EDT 2007	Nick Castellano <entropy@freetds.org>
	* configure.ac
	* src/apps/Makefile.am
	* src/apps/fisql: contribute free DB-Libary isql application

Tue Jan 16 09:57:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c: fix messages

Tue Jan 16 09:48:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: fix problem with Perl 5.8.8
	* src/dblib/dblib.c: fix possible thread problem

Tue Jan 16 00:28:28 EST 2007	JK Lowden <jklowden@freetds.org>
	* include/dblib.h src/dblib/bcp.c
	* src/dblib/dblib.c src/dblib/unittests/rpc.c
	- support variadic form of dbperror

Mon Jan 15 14:40:35 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/common.c
	* src/dblib/unittests/rpc.c
	* src/dblib/unittests/t0004.c
	* src/dblib/unittests/t0005.c
	* src/dblib/unittests/t0007.c
	* src/dblib/unittests/t0019.c
	* src/dblib/unittests/t0020.c
	- fail if an unanticipated message/error is received

Sun Jan 14 23:16:17 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/tds/config.c src/tds/login.c
	- began work on autodetecting the server's TDSVER
	- works with libtds, not db-lib

Sun Jan 14 20:38:25 EST 2007	JK Lowden <jklowden@freetds.org>
	* include/dblib.h include/tds.h
	* src/dblib/dblib.c src/dblib/dbutil.c
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0012.c
	* src/dblib/unittests/timeout.c
	* src/tds/net.c TODO
	- timeout unit test also works with dbsetinterrupt

Sat Jan 13 17:09:05 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/timeout.c added 
	* src/dblib/dblib.c 
	* src/dblib/unittests/Makefile.am src/dblib/unittests/t0001.c
	* src/tds/login.c src/tds/query.c src/tds/util.c